--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>JAY KAY ESS</title>
         <link rel="stylesheet" type="text/css" href="assets/jaykayess.css" />
         <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
         <script type="text/javascript" src="js/animation.js"></script>
     </head>
     <body>
