--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <title>JAY KAY ESS</title>
-        <link rel="stylesheet" type="text/css" href="assets/jaykayess.css" />
+        <link rel="stylesheet" type="text/css" href="css/jaykayess.css" />
         <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
         <script type="text/javascript" src="js/animation.js"></script>
