with new graphics and scrollspy

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
+     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <title>JAY KAY ESS</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/jaykayess.css" />
         <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/animation.js"></script>
     </head>
-    <body>
-        <div id="banner"></div>
-        <div id="nav">Justin Kerr Sheckler</div>
+    <body data-spy="scroll" data-target="#navigation">
+        <div id="navigation" class="navbar">
+            <ul class="nav navbar-nav">
+                <li><a href="#home">Justin Kerr Sheckler</a></li>
+                <li><a href="#one">One</a></li>
+                <li><a href="#two">Two</a></li>
+                <li><a href="#three">Three</a></li>
+            </ul>
+        </div>
         <div id="home" class="slide">
             <div id="logo">
                 <img class="star" src="img/jks_splash_star.png" />
